# redclaw

./: .gitignore  DEPLOYMENT_QA_REPORT.md  DOCKER_OPTIMIZATION_COMPLETE.md  DOCKER_SIZE_ANALYSIS.md  GETTING_STARTED.md  Makefile  OUTPUT_IMPLEMENTATION.md  pyproject.toml  readme.md
docker/: Dockerfile.full  Dockerfile.kali  Dockerfile.minimal  Dockerfile.standard  Makefile  README.md  tools.yaml
scripts/: test_docker_images.sh  test_output.py
src/redclaw/: __init__.py
src/redclaw/agent/: __init__.py  agent.py  memory.py  prompts.py  react.py
src/redclaw/cli/: main.py  plan.py  results.py  scan.py  system.py  tools.py
src/redclaw/core/: __init__.py  executor.py  planner.py  policy.py  profiles.py
src/redclaw/intelligence/: __init__.py  graph.py  search.py  workflow.py
src/redclaw/models/: __init__.py  config.py  scan.py  tool.py
src/redclaw/output/: __init__.py  banner.py  console.py  display.py  errors.py  formatters.py  json_output.py  report.py  stealth.py
src/redclaw/storage/: __init__.py  db.py  files.py
src/redclaw/tools/: __init__.py  base.py  dns.py  gobuster.py  loader.py  nikto.py  nmap.py  nuclei.py  registry.py
tests/: conftest.py  test_agent.py  test_benchmark.py  test_cli.py  test_extensibility.py  test_integration_output.py  test_intelligence.py  test_output.py  test_planner.py  test_policy.py  test_stress.py  test_tools.py
