[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redclaw"
version = "0.1.0"
description = "CLI security scanner — orchestrates Kali Linux tools via Docker"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "docker>=7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlite-utils>=3.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
ai = [
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.scripts]
claw = "redclaw.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/redclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
